Production improvements: Add error boundaries, loading states, Sentry integration, Upstash rate limiting, and CSP headers

--- a/nextjs/env.example
+++ b/nextjs/env.example
@@ -23,6 +23,11 @@ RESEND_FROM_EMAIL=noreply@babewhatsfordinner.com
 GOOGLE_CLIENT_ID=your-client-id.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=your-client-secret
 
+# Upstash Redis (for production rate limiting - optional but recommended)
+# Get your credentials from: https://console.upstash.com/
+# UPSTASH_REDIS_REST_URL=https://your-redis.upstash.io
+# UPSTASH_REDIS_REST_TOKEN=your-token
+
 # Optional: Error Tracking (Sentry)
 # NEXT_PUBLIC_SENTRY_DSN=your-sentry-dsn
 # SENTRY_AUTH_TOKEN=your-sentry-auth-token
