--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,5 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
-  "buildCommand": "cd nextjs && npm run build",
-  "devCommand": "cd nextjs && npm run dev",
-  "installCommand": "cd nextjs && npm install",
-  "framework": null,
-  "outputDirectory": "nextjs/.next"
+  "framework": "nextjs"
 }
 
